--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-  "name": "Ultimatum",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "ts-node-dev --respawn --transpile-only --poll ./src/index.ts",
-    "lint": "prettier --write .",
-    "build": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PraveshKunwar/Ultimatum.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/PraveshKunwar/Ultimatum/issues"
-  },
-  "homepage": "https://github.com/PraveshKunwar/Ultimatum#readme",
-  "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-angular": "^11.0.0",
-    "@types/node": "^14.14.22",
-    "@types/prettier": "^2",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn dlx @yarnpkg/doctor && lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "*.ts": "prettier --write",
-    "*.js": "prettier --write"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-angular"
-    ],
-    "rules": {
-      "scope-case": [
-        2,
-        "always",
-        "pascal-case"
-      ],
-      "type-enum": [
-        2,
-        "always",
-        [
-          "chore",
-          "build",
-          "ci",
-          "docs",
-          "feat",
-          "fix",
-          "perf",
-          "refactor",
-          "revert",
-          "style",
-          "test"
-        ]
-      ]
-    }
-  }
+	"name": "Ultimatum",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "ts-node-dev --respawn --transpile-only --poll ./src/index.ts",
+		"lint": "prettier --write .",
+		"build": "tsc"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/PraveshKunwar/Ultimatum.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/PraveshKunwar/Ultimatum/issues"
+	},
+	"homepage": "https://github.com/PraveshKunwar/Ultimatum#readme",
+	"devDependencies": {
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-angular": "^11.0.0",
+		"@types/glob": "^7",
+		"@types/node": "^14.14.22",
+		"@types/prettier": "^2",
+		"husky": "^4.3.8",
+		"lint-staged": "^10.5.3",
+		"prettier": "^2.2.1",
+		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.1",
+		"typescript": "^4.1.3"
+	},
+	"lint-staged": {
+		"*.ts": "prettier --write",
+		"*.js": "prettier --write"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-angular"
+		],
+		"rules": {
+			"scope-case": [
+				2,
+				"always",
+				"pascal-case"
+			],
+			"type-enum": [
+				2,
+				"always",
+				[
+					"chore",
+					"build",
+					"ci",
+					"docs",
+					"feat",
+					"fix",
+					"perf",
+					"refactor",
+					"revert",
+					"style",
+					"test"
+				]
+			]
+		}
+	},
+	"dependencies": {
+		"consola": "^2.15.2",
+		"discord.js": "^12.5.1",
+		"glob": "^7.1.6",
+		"util": "^0.12.3"
+	}
 }
