--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
+    "mathjs": "^9.2.0",
     "typescript": "^4.1.3"
   },
   "name": "ultimatum",
