--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "name": "ultimatum",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index",
+  "typings": "dist/index",
   "devDependencies": {
     "@types/node": "^14.14.25"
   },
