--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
     "mathjs": "^9.2.0",
+    "mongoose": "^5.11.15",
     "typescript": "^4.1.3"
   },
   "name": "ultimatum",
