--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
     "mathjs": "^9.2.0",
     "mongoose": "^5.11.15",
+    "node-fetch": "^2.6.1",
     "typescript": "^4.1.3"
   },
   "name": "ultimatum",
