--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "useTabs": true,
-  "semi": true,
-  "singleQuote": true
+	"useTabs": true,
+	"semi": true,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"tabWidth": 2
 }
