--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
-		"module": "commonjs",
+		"target": "ES6",
+		"module": "CommonJS",
 		"allowJs": true,
 		"checkJs": true,
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"removeComments": true,
 		"noEmit": false,
-		"strict": true,
 		"noImplicitAny": false,
 		"noImplicitThis": true,
-		"alwaysStrict": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true,
