--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@types/glob": "^7.1.3",
 		"axios": "^0.21.1",
+		"discord-player": "^3.3.2",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"fs": "^0.0.1-security",
