--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"dependencies": {
 		"@types/glob": "^7.1.3",
 		"axios": "^0.21.1",
-		"discord-player": "^3.3.2",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"fs": "^0.0.1-security",
@@ -10,7 +9,10 @@
 		"mathjs": "^9.2.0",
 		"mongoose": "^5.11.15",
 		"node-fetch": "^2.6.1",
-		"typescript": "^4.1.3"
+		"typescript": "^4.1.3",
+		"yt-search": "^2.7.3",
+		"ytdl": "^1.4.1",
+		"ytdl-core": "^4.5.0"
 	},
 	"name": "ultimatum",
 	"version": "1.0.0",
