--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
+		"target": "ES2017",
 		"module": "CommonJS",
 		"allowJs": true,
 		"checkJs": true,
@@ -14,6 +14,7 @@
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true,
 		"strictPropertyInitialization": false,
+		"moduleResolution": "node",
 		"forceConsistentCasingInFileNames": true
 	}
 }
