--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"fs": "^0.0.1-security",
 		"glob": "^7.1.6",
 		"mathjs": "^9.2.0",
+		"moment": "^2.29.1",
 		"mongoose": "^5.11.15",
 		"node-fetch": "^2.6.1",
 		"typescript": "^4.1.3",
