--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"ffmpeg-static": "^4.2.7",
 		"fs": "^0.0.1-security",
 		"glob": "^7.1.6",
+		"leven": "^3.1.0",
 		"mathjs": "^9.2.0",
 		"moment": "^2.29.1",
 		"mongoose": "^5.11.15",
