--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"dependencies": {
-		"@discordjs/opus": "^0.4.0",
 		"@types/glob": "^7.1.3",
 		"axios": "^0.21.1",
 		"bad-words": "^3.0.4",
@@ -10,17 +9,11 @@
 		"ffmpeg-static": "^4.2.7",
 		"fs": "^0.0.1-security",
 		"glob": "^7.1.6",
-		"leven": "^3.1.0",
 		"mathjs": "^9.2.0",
 		"moment": "^2.29.1",
 		"mongoose": "^5.11.15",
 		"node-fetch": "^2.6.1",
-		"node-opus": "^0.3.3",
-		"opusscript": "^0.0.8",
-		"typescript": "^4.1.3",
-		"yt-search": "^2.7.3",
-		"ytdl": "^1.4.1",
-		"ytdl-core": "^4.5.0"
+		"typescript": "^4.1.3"
 	},
 	"name": "ultimatum",
 	"version": "1.0.0",
