--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@discordjs/opus": "^0.5.0",
 		"@types/glob": "^7.1.3",
 		"axios": "^0.21.1",
 		"bad-words": "^3.0.4",
@@ -13,14 +14,19 @@
 		"moment": "^2.29.1",
 		"mongoose": "^5.11.15",
 		"node-fetch": "^2.6.1",
-		"typescript": "^4.1.3"
+		"node-opus": "^0.3.3",
+		"opusscript": "^0.0.8",
+		"typescript": "^4.1.3",
+		"util": "^0.12.3",
+		"yt-search": "^2.7.5",
+		"ytdl-core": "^4.5.0"
 	},
 	"name": "ultimatum",
 	"version": "1.0.0",
 	"main": "dist/index",
 	"typings": "dist/index",
 	"devDependencies": {
-		"@types/node": "^14.14.25"
+		"@types/node": "^14.14.35"
 	},
 	"scripts": {
 		"start": "node dist/index.js",
