--- a/@website/package.json
+++ b/@website/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
