--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"node-fetch": "^2.6.1",
 		"node-opus": "^0.3.3",
 		"opusscript": "^0.0.8",
+		"react-bootstrap": "^1.5.2",
+		"styled-components": "^5.2.1",
 		"typescript": "^4.1.3",
 		"util": "^0.12.3",
 		"yt-search": "^2.7.5",
