--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,11 @@
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
