--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/btoa": "^1.2.3",
+    "@types/js-cookie": "^2.2.6",
     "@types/node-fetch": "^2.5.8",
     "axios": "^0.21.1",
     "btoa": "^1.2.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.9",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
