Updated help.ts, added util.ts

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,6 @@
 			"@ultimatum/util": ["./utils/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../src/utils/BadWords.ts"],
 	"exclude": ["node_modules"]
 }
