Finished note command, and used prettifier to prettify and lint other files.

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,11 @@
 			"@ultimatum/util": ["./utils/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../src/utils/BadWords.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"../src/utils/BadWords.ts"
+	],
 	"exclude": ["node_modules"]
 }
