--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.5.0",
 		"@types/glob": "^7.1.3",
+		"@types/node-fetch": "^2.5.9",
 		"axios": "^0.21.1",
 		"bad-words": "^3.0.4",
 		"discord.js": "^12.5.1",
