--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"node-fetch": "^2.6.1",
 		"node-opus": "^0.3.3",
 		"opusscript": "^0.0.8",
+		"prettier": "^2.2.1",
 		"react-bootstrap": "^1.5.2",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.1.3",
