--- a/cli/package.json
+++ b/cli/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "cli",
+  "name": "ts-djs-create",
   "version": "1.0.0",
   "description": "A CLI for creating a Discord JS project with Typescript (template).",
   "main": "index.js",
+  "preferGlobal": true,
+  "bin": "/lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node lib/main.js",
-    "dev": "nodemon lib/main.js"
+    "dev": "nodemon lib/main.js",
+    "lint": "prettier --write ."
   },
   "author": "Pravesh Kunwar",
   "license": "MIT",
   "dependencies": {
     "@types/inquirer": "^7.3.1",
+    "commander": "^7.2.0",
+    "discord": "^0.8.2",
     "inquirer": "^8.0.0",
-    "ora": "^5.4.0"
+    "ora": "^5.4.0",
+    "prettier": "^2.2.1"
   }
 }
