--- a/cli/package.json
+++ b/cli/package.json
@@ -18,8 +18,10 @@
     "@types/inquirer": "^7.3.1",
     "commander": "^7.2.0",
     "discord": "^0.8.2",
+    "glob": "^7.1.6",
     "inquirer": "^8.0.0",
     "ora": "^5.4.0",
+    "path": "^0.12.7",
     "prettier": "^2.2.1"
   }
 }
