(feat): New files.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"ffmpeg-static": "^4.2.7",
 		"fs": "^0.0.1-security",
 		"glob": "^7.1.6",
+		"inquirer": "^8.0.0",
 		"mathjs": "^9.2.0",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.3",
 		"node-fetch": "^2.6.1",
 		"node-opus": "^0.3.3",
 		"opusscript": "^0.0.8",
+		"path": "^0.12.7",
 		"prettier": "^2.2.1",
 		"react-bootstrap": "^1.5.2",
 		"styled-components": "^5.2.1",
