--- a/cli/package.json
+++ b/cli/package.json
@@ -18,6 +18,7 @@
     "@types/inquirer": "^7.3.1",
     "commander": "^7.2.0",
     "discord": "^0.8.2",
+    "discord.js": "^12.5.3",
     "glob": "^7.1.6",
     "inquirer": "^8.0.0",
     "ora": "^5.4.0",
