--- a/cli/package.json
+++ b/cli/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "ts-djs-create",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "A CLI for creating a Discord JS project with Typescript (template).",
 	"main": "index.js",
 	"preferGlobal": true,
-	"bin": "/lib/index.js",
+	"bin": {
+		"ts-djs-create": "lib/index.js"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
