--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"preferGlobal": true,
 	"bin": {
-		"ts-djs-create": "lib/index.js"
+		"djs": "index.js"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
