--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -5,7 +5,7 @@
 		"module": "CommonJS",
 		"allowJs": true,
 		"checkJs": true,
-		"outDir": "./lib",
+		"outDir": "./",
 		"removeComments": true,
 		"noEmit": false,
 		"noEmitOnError": false,
