--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"scripts": {
 		"start": "node dist/index.js",
-		"done": "nodemon dist/index.js",
+		"dev": "nodemon dist/index.js",
 		"postinstall": "tsc",
 		"build": "tsc",
 		"typecheck": "tsc",
