--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"@types/node-fetch": "^2.5.9",
 		"axios": "^0.21.1",
 		"bad-words": "^3.0.4",
+		"canvas": "^2.7.0",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"ffmpeg": "^0.0.4",
