(chore): Need to add JS configuration, basis created.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": ["src"],
-	"exclude": ["app", "bin", "cli", "electron"]
+	"exclude": ["app", "cli", "electron"]
 }
