--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.5.0",
 		"@types/glob": "^7.1.3",
+		"@types/jest": "^26.0.22",
 		"@types/node-fetch": "^2.5.9",
+		"@types/react": "^17.0.3",
+		"@types/react-dom": "^17.0.3",
 		"axios": "^0.21.1",
 		"bad-words": "^3.0.4",
 		"canvas": "^2.7.0",
@@ -23,7 +26,7 @@
 		"prettier": "^2.2.1",
 		"react-bootstrap": "^1.5.2",
 		"styled-components": "^5.2.1",
-		"typescript": "^4.1.3",
+		"typescript": "^4.2.4",
 		"util": "^0.12.3",
 		"yt-search": "^2.7.5",
 		"ytdl-core": "^4.5.0"
@@ -33,7 +36,7 @@
 	"main": "dist/index",
 	"typings": "dist/index",
 	"devDependencies": {
-		"@types/node": "^14.14.35"
+		"@types/node": "^14.14.37"
 	},
 	"scripts": {
 		"start": "node dist/index.js",
