--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"allowJs": true,
 		"checkJs": true,
 		"outDir": "./dist",
-		"removeComments": true,
+		"removeComments": false,
 		"noEmit": false,
 		"noEmitOnError": false,
 		"noImplicitAny": false,
