--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@discordjs/opus": "^0.5.0",
+		"@types/dotenv": "^8.2.0",
 		"@types/glob": "^7.1.3",
 		"@types/jest": "^26.0.22",
 		"@types/node-fetch": "^2.5.9",
