--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "next": "10.2.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
