--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,11 @@
     "next": "10.2.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
