--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "cookie": "^0.4.1",
+    "framer-motion": "^4",
     "next": "10.2.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
