--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"dependencies": {
+		"@chakra-ui/icons": "^1.0.13",
+		"@chakra-ui/system": "^1.6.5",
 		"@discordjs/opus": "^0.5.0",
 		"@types/dotenv": "^8.2.0",
 		"@types/glob": "^7.1.3",
@@ -25,6 +27,7 @@
 		"opusscript": "^0.0.8",
 		"path": "^0.12.7",
 		"prettier": "^2.2.1",
+		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.2.4",
