--- a/app/package.json
+++ b/app/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "aaa",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.6.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "cookie": "^0.4.1",
-    "framer-motion": "^4",
-    "next": "10.2.0",
-    "nookies": "^2.5.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^15.0.1",
-    "@types/react": "^17.0.4",
-    "typescript": "^4.2.4"
-  }
+	"name": "aaa",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@chakra-ui/react": "^1.6.1",
+		"@emotion/react": "^11.4.0",
+		"@emotion/styled": "^11",
+		"cookie": "^0.4.1",
+		"emotion": "^11.0.0",
+		"framer-motion": "^4",
+		"next": "10.2.0",
+		"nookies": "^2.5.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-redux": "^7.2.4",
+		"redux": "^4.1.0",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-persist": "^6.0.0"
+	},
+	"devDependencies": {
+		"@types/node": "^15.0.1",
+		"@types/react": "^17.0.4",
+		"typescript": "^4.2.4"
+	}
 }
