--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
 		"@chakra-ui/react": "^1.6.1",
 		"@emotion/react": "^11.4.0",
 		"@emotion/styled": "^11",
+		"@material-ui/core": "^4.11.4",
+		"@material-ui/utils": "^4.11.2",
+		"bootstrap-icons": "^1.5.0",
 		"cookie": "^0.4.1",
 		"emotion": "^11.0.0",
 		"framer-motion": "^4",
