--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@chakra-ui/icons": "^1.0.13",
 		"@chakra-ui/system": "^1.6.5",
 		"@discordjs/opus": "^0.5.0",
+		"@material-ui/icons": "^4.11.2",
 		"@types/dotenv": "^8.2.0",
 		"@types/glob": "^7.1.3",
 		"@types/jest": "^26.0.22",
@@ -29,7 +30,7 @@
 		"prettier": "^2.2.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
-		"styled-components": "^5.2.1",
+		"styled-components": "^5.3.0",
 		"typescript": "^4.2.4",
 		"util": "^0.12.3",
 		"yt-search": "^2.7.5",
